src/pages/Configurators/components/Sections/Navbar/Navbar.module.scss
@import '../../../../../assets/fonts/SnellRoundhad';
@import '../../../../../styles/utils/optimizedBackdropFilter';
@import '../../../../../styles/palettes/configuratorPallete';

.container {
	position: absolute;
	top: 0;
	left: 0;

	width: 100%;
  overflow: hidden;
	height: 160px;
	background-color: $primary-background;

	color: #fff;
	display: flex;
	flex-direction: column;
	padding: 0 20px;

	z-index: 1;

	.top-section {
		font-family: 'Inter', sans-serif;
		font-weight: lighter;
		font-size: 1.5rem;

		display: flex;
		justify-content: space-between;
		align-items: center;
		height: 50%;

		.signature {
			font-family: 'Snell Roundhad';
			font-size: 3.5rem;
			display: block;
			padding: 0em 0.2em 0em 0.3em;

			font-weight: bold;

			background: linear-gradient(
				45deg,
				rgba(160, 160, 160, 1) 0%,
				rgb(224, 223, 223) 56%
			);
			background-clip: text;
			-webkit-background-clip: text;
			-webkit-text-fill-color: transparent;

			margin-left: 55px;

			mask-image: linear-gradient(
				-75deg,
				rgba(0, 0, 0, 0.6) 30%,
				#000 50%,
				rgba(0, 0, 0, 0.6) 70%
			);
			-webkit-mask-image: linear-gradient(
				-75deg,
				rgba(0, 0, 0, 0.6) 30%,
				#000 50%,
				rgba(0, 0, 0, 0.6) 70%
			);

			mask-size: 200%;
			-webkit-mask-size: 200%;

			user-select: none;
			-webkit-touch-callout: none;
			-webkit-user-select: none;
			-khtml-user-select: none;
			-moz-user-select: none;
			-ms-user-select: none;

			animation: wave 4.5s infinite;
		}

		@keyframes wave {
			from {
				mask-position: 150%;
				-webkit-mask-position: 100%;
			}
			to {
				mask-position: -50%;
				-webkit-mask-position: -100%;
			}
		}

		.more,
		.summary {
			text-decoration: none;
			color: $primary-font-color;
			transition: 500ms;

			&:hover {
				cursor: pointer;
				transform: translateY(3px);

				filter: brightness(0.75);
			}
		}
	}

	.bottom-section {
		font-family: 'Montserrat', sans-serif;
		font-weight: lighter;

		font-size: 1.25rem;
		align-self: center;
		display: flex;
		gap: 20px;
		justify-content: space-between;
		align-items: center;
		height: 50%;

		svg {
			width: 24px;
			height: 24px;

			transform: rotate(90deg);
			fill: $primary-icon-color;
		}

		.option {
			transition: 500ms;
      white-space: nowrap;

			&:hover {
				cursor: pointer;
			}
		}
	}

	@include optimizedBackdropFilter(blur(5px));

	transition: 500ms;
}

.container:after {
	content: '';
	position: absolute;
	width: 100%;
	bottom: 2px;
	left: 0;
	z-index: -1;
	@include primary-box-shadow;
}

.container.hidden {
	transform: translateY(-110%);
}

@media (max-width: 900px) {
	.container {
		.top-section {
			.signature {
				margin: 0 auto;
			}

			.more,
			.summary {
				display: none;
			}
		}
	}
}

